// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing Student component with data Matches the snapshot: shows expanded Expand component 1`] = `
<li
  className="single_student"
  style={Object {}}
>
  <table>
    <tbody>
      <tr>
        <td>
          <img
            alt="INGABERG ORTON profile"
            src="https://storage.googleapis.com/hatchways-app.appspot.com/assessments/data/frontend/images/voluptasdictablanditiis.jpg"
          />
        </td>
        <td>
          <ul
            className="data_space"
          >
            <li>
              <div
                className="stu_name"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                INGABERG ORTON
              </div>
            </li>
            <li
              className="stu_data"
            >
              Email: iorton0@imdb.com
            </li>
            <li
              className="stu_data"
            >
              Company: Yadel
            </li>
            <li
              className="stu_data"
            >
              Skill: Oracle
            </li>
            <li
              className="stu_data"
            >
              Average: 88.875%
            </li>
          </ul>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          <ul
            className="grade_lst"
          >
            <li>
              <button
                className="expand"
                onClick={[Function]}
              >
                -
              </button>
            </li>
            <li>
              Test 1:
                
              78%
            </li>
            <li>
              Test 2:
                
              100%
            </li>
            <li>
              Test 3:
                
              92%
            </li>
            <li>
              Test 4:
                
              86%
            </li>
            <li>
              Test 5:
                
              89%
            </li>
            <li>
              Test 6:
                
              88%
            </li>
            <li>
              Test 7:
                
              91%
            </li>
            <li>
              Test 8:
                
              87%
            </li>
          </ul>
          <ul>
            <li
              className="tags"
            >
              <button
                onClick={[Function]}
              >
                ad
              </button>
              <button
                onClick={[Function]}
              >
                ver
              </button>
              <button
                onClick={[Function]}
              >
                tise
              </button>
              <button
                onClick={[Function]}
              >
                Ment
              </button>
              <button
                onClick={[Function]}
              >
                339%?
              </button>
            </li>
            <li>
              <input
                onKeyUp={[Function]}
                placeholder="Add a tag"
                type="text"
              />
            </li>
          </ul>
        </td>
      </tr>
    </tbody>
  </table>
</li>
`;

exports[`testing Student component with data Matches the snapshot: shows non-expanded Expand component 1`] = `
<li
  className="single_student"
  style={Object {}}
>
  <table>
    <tbody>
      <tr>
        <td>
          <img
            alt="INGABERG ORTON profile"
            src="https://storage.googleapis.com/hatchways-app.appspot.com/assessments/data/frontend/images/voluptasdictablanditiis.jpg"
          />
        </td>
        <td>
          <ul
            className="data_space"
          >
            <li>
              <div
                className="stu_name"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                INGABERG ORTON
              </div>
            </li>
            <li
              className="stu_data"
            >
              Email: iorton0@imdb.com
            </li>
            <li
              className="stu_data"
            >
              Company: Yadel
            </li>
            <li
              className="stu_data"
            >
              Skill: Oracle
            </li>
            <li
              className="stu_data"
            >
              Average: 88.875%
            </li>
          </ul>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          <ul
            className="grade_lst"
          >
            <li>
              <button
                className="expand"
                onClick={[Function]}
              >
                +
              </button>
            </li>
            <li />
          </ul>
          <ul>
            <li
              className="tags"
            >
              <button
                onClick={[Function]}
              >
                ad
              </button>
              <button
                onClick={[Function]}
              >
                ver
              </button>
              <button
                onClick={[Function]}
              >
                tise
              </button>
              <button
                onClick={[Function]}
              >
                Ment
              </button>
              <button
                onClick={[Function]}
              >
                339%?
              </button>
            </li>
            <li>
              <input
                onKeyUp={[Function]}
                placeholder="Add a tag"
                type="text"
              />
            </li>
          </ul>
        </td>
      </tr>
    </tbody>
  </table>
</li>
`;
